<resources>
    <string name="app_name">Knowy</string>
    <string name="logo_knowy">Logo Knowy</string>
    <string name="welcome">Welcome To Knowy</string>
    <string name="app_motto">The most reliable application for discovering your best potential. Knowy helps you explore the best potential within you!</string>
    <string name="get_started">Get Started</string>
    <string name="image_login">Image Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_guideline">Login to Continue Using App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_account">Don\'t Have An Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_account">Register Your Account</string>
    <string name="enter_information">Enter Your Personal Information</string>
    <string name="image_register">Image Register</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="test">Test</string>
    <string name="profile">Profile</string>
    <string name="trending_discussion">Trending</string>
    <string name="new_discussion">New</string>
    <string name="upload_title">Open a Space to Share Ideas and Inspiration!</string>
    <string name="description">Description</string>
    <string name="head_topic">Head Topic</string>
    <string name="discussion">Discussion</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="comment">Comment</string>
    <string name="bio_description">Bio Description</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="fullname">Fullname</string>
    <string name="save_profile">Save Profile</string>
    <string name="create_discussion">Create Discussion</string>
    <string name="nickname">Nickname</string>
    <string name="logout">Logout</string>
    <string name="error_email">Error in entering email</string>
    <string name="error_password">The password must not be less than 8 characters</string>
    <string name="forum_discussion">Forum Discussion</string>
    <string name="image_discussion">image_discussion</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor augue, varius quis dolor et, ornare ullamcorper diam. Pellentesque eu enim ac neque vestibulum tristique ac in lacus. Pellentesque eros magna, porta volutpat purus non</string>
    <string name="post">Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_test">History Test</string>
    <string name="discover_your_best_potential">Discover Your Best Potential</string>
    <string name="ocean_test">OCEAN TEST</string>
    <string name="ocean_description">A tool helps in self-understanding through 5 dimensions: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism. </string>
    <string name="go_to_test">Go To Test</string>
    <string name="aptitude_test">APTITUDE TEST</string>
    <string name="aptitude_description">A tool used to measure individual abilities and potential in various areas, such as cognitive abilities, problem solving, verbal skills, and spatial abilities.</string>
    <string name="analyze_job_recommendation">Analyze Job Recommendation</string>
    <string name="start_test">Start Test</string>
    <string name="test_result">Test Result :</string>
    <string name="score">Score</string>
    <string name="openness">Openness Test</string>
    <string name="openness_description">Interest in new experiences, ideas and creativity.</string>
    <string name="conscientiousness">Conscientiousness Test</string>
    <string name="conscientiousness_description">Regularity, thoroughness, and persistence in achieving goals.</string>
    <string name="extra_version">Extraversion Test</string>
    <string name="extra_version_description">Level of energy, enthusiasm, and friendliness in social interactions.</string>
    <string name="agreeableness">Agreeableness Test</string>
    <string name="agreeableness_description">Caring, empathy, and willingness to cooperate with others.</string>
    <string name="neuroticism">Neuroticism Test</string>
    <string name="neuroticism_description">Anxiety, stress, and emotional vulnerability.</string>
    <string name="image_result">Image Result</string>
    <string name="your_job_recommendation">Your Job Recommendation is</string>
    <string name="analyze_result">Analyze Result</string>
    <string name="back_to_home">Back To Home</string>
    <string name="question">Question</string>
    <string name="image_question">Image Question</string>
    <string name="answer_a">A</string>
    <string name="answer_b">B</string>
    <string name="answer_c">C</string>
    <string name="answer_d">D</string>
    <string name="next">Next</string>
    <string name="numerical_aptitude">Numerical Aptitude Test</string>
    <string name="numerical_description">Calculating, understanding data, and solving mathematical problems.</string>
    <string name="spatial_aptitude">Spatial Aptitude Test</string>
    <string name="spatial_description">Understanding and manipulating spatial information, such as maps and diagrams.</string>
    <string name="perceptual_aptitude">Perceptual Aptitude Test</string>
    <string name="perceptual_description">Identify and discriminate between visual stimuli, such as shapes, patterns, symbols, and details</string>
    <string name="abstract_reasoning">Abstract Reasoning Test</string>
    <string name="abstract_description">Identify patterns, relationships, and rules in abstract information, typically presented in the form of shapes, symbols, or diagrams</string>
    <string name="verbal_reasoning">Verbal Reasoning Test</string>
    <string name="verbal_description">Individual\'s ability to understand, analyze, and interpret written language.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="agree">Agree</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neutral">Neutral</string>
    <string name="congrats">Congrats! You Have Finish Test</string>
    <string name="aptitude_score">Your Score is: %.2f</string>
    <string name="title_score">%1$s out %2$s are correct</string>
    <string name="finish">Finish</string>
    <string name="ocean_score">Your %1$s score is: %2$.2f</string>
    <string name="percentage">%d%%</string>
    <string name="login_error">Login Failed, Please Check Your Email and Password Again</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_your_sure_you_want_logout">Are your sure you want logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="image_comment">Image Comment</string>
    <string name="image_back">Image Back</string>
    <string name="test_result_detail">Test Result Detail</string>
    <string name="complete_test">Please Complete the Test First</string>
    <string name="save_success">Save Success</string>
    <string name="save_failed">Save Failed : %1$s)</string>
    <string name="select_answer">Please select answer to continue</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="profile_updated">Profile has been Updated</string>
    <string name="fill_all_fields">Please Fill in All Fields</string>
    <string name="login_success">Login Success</string>
    <string name="add_comment_success">Comment Added Successfully</string>
    <string name="add_comment_failed">Add Comment Failed : %1$s)</string>
    <string name="success_create_discussion">Success Create Discussion</string>
    <string name="failed_create_discussion">Failed Create Discussion</string>
    <string name="never_test">You Haven\'t Done Any Tests at All</string>
    <string name="error_empty_email">Please Input Your Email</string>
    <string name="error_empty_password">Please Input Your Password</string>

</resources>